src/test/resources/tests/typeError/structCreate.qg

init {
    new aStruct(true)
}

run true

input(a,b) true

struct aStruct {
    aVal: number
}